ValidatorByPhenTime can cache observations for speed